add break section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
 
 
     <!-- Break Start-->
+        <div class="break p-2 text-center bg-dark text-light fw-bold" >
+            Lorem ipsum dolor sit, amet consectetur
+        </div>
     <!-- Break End-->
 
 
