add job cards button

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="#" class="btn btn-primary">Go To Top</a>
                           </div>
                         </div>
                     </div>
@@ -166,6 +167,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="https://www.google.com.tw/" class="btn btn-primary">google</a>
                           </div>
                         </div>
                     </div>
@@ -175,6 +177,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="https://www.youtube.com/" class="btn btn-primary">YouTube</a>
                           </div>
                         </div>
                     </div>
@@ -184,6 +187,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="https://www.google.com/maps" class="btn btn-primary">google maps</a>
                           </div>
                         </div>
                     </div>
@@ -195,6 +199,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                           </div>
                         </div>
                     </div>
@@ -204,6 +209,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                           </div>
                         </div>
                     </div>
@@ -213,6 +219,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                           </div>
                         </div>
                     </div>
@@ -222,6 +229,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                           </div>
                         </div>
                     </div>
