--- a/index.html
+++ b/index.html
@@ -254,12 +254,13 @@
               </nav>
             </div>
         </div>
-
-
     <!-- Jobs End-->
 
 
     <!-- Copyright Start-->
+        <div class="copyright bg-dark text-light text-center p-2 fw-bold">
+            Copyright © 2021 Blue Inc.
+        </div>
     <!-- Copyright End-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
